# playwright-python-tests

./: .gitignore  LICENSE  README.md  config.py  conftest.py  index.html  pyproject.toml  pytest.ini
allure-report/: index.html
allure-results/: 003b3201-0c23-4e00-a452-c720143d6b64-container.json  006d5241-f9dd-4e5e-9426-7865349201e6-container.json  00a95022-7702-470d-8419-e06bf491a55d-container.json  016fca56-1ccc-43fd-8a89-98381df16d34-result.json  020306b6-2aed-4a68-ab6e-086176acedc0-result.json  02912a99-c849-4b3a-b34f-46c4bb725bff-container.json  03b58642-2232-44ba-b838-8596d307e83d-container.json  03cada7d-31c2-4d84-bc20-13af6125c858-container.json  05285918-ed34-4344-af77-c6559b52c194-container.json  06b8d3a6-ccf7-41b4-831a-dfcb8abc7271-container.json  07533345-27e8-42c4-b3fc-d9895cf6bc78-container.json  08290b84-7c5f-4237-9b94-f6ea6d3d350d-container.json  08d39289-ab6c-41b8-89b9-b1fdf10f7c02-container.json  09056f28-6c42-4109-9e98-66864000d3fc-container.json  0ad2ac58-b3a4-4525-b317-f92b9553071f-container.json  0ad78635-d66f-45e9-984b-02b24fd09495-container.json  0b4f2dab-8ed0-4bef-9f92-8cf16feb873b-container.json  0b9c2f5d-e4bf-4318-9364-783edd45fcec-container.json  0bc89689-bb63-4e1b-8f62-f97d1a705d5d-container.json  0cb261f0-af93-4d2c-9045-996527da18e5-container.json  0ce85e7d-0406-449c-9141-98973407207a-container.json  0ee247fe-c70a-490f-b24a-b7cabe6ba9c2-container.json  0f3215d6-eaa8-46b7-8b58-c9499cdec962-container.json  0fcff42e-1a43-4c65-a3bf-dc08a6eb6996-container.json  1053be44-d169-4426-b1dc-16d359071701-container.json  (+403 more)
data/: behaviors.csv  (+6 more)
(+393 files in other folders)
